resources/assets/sass/components/_btn.scss
.btn {
	font-family: $header-font;
	text-transform: uppercase;
	text-decoration: none;
	cursor: pointer;
	border: none;
	&:hover, &:visited {
		transform: scale(1.01);
		transition: .2s all;
		text-decoration: none;
	}
	&:active, &:focus{
		transition: .2s all;
	}
	&--teal {
		background-color: $teal;
		&:hover, &:visited {
			box-shadow: 2px 2px 3px rgba($shadow, .20);
			background-color: $light-teal;
		}
	}
	&--purple {
		background-color: $purple;
		color: $blue;
		&:hover, &:visited {
			box-shadow: 2px 2px 3px rgba($shadow, .20);
			background-color: $light-purple;
		}
	}
}
.covid-banner__btn:link, .covid-banner__btn:visited {
	display: inline-block;
	color: $white;
	padding: 5px 28px;
}
.nav-bar__btn:link, .nav-bar__btn:visited{
	display: inline-block;
	border: none;
	padding: 25px 20px 15px 20px;
	color: $blue;
}

.is-style-Two-Tone {
	a {
		border-radius: 0px;
		padding: 17px 25px 8px;
		text-transform: uppercase;
		font-family: $body-font;
		letter-spacing: 5px;
		font-size: 1em;
	}
	a:link, a:visited{
		color: $white;
	}
	position: relative;
	.has-purple-background-color {
		box-shadow: 6px 6px $lime;
		&:hover {
			box-shadow: 0px 0px $teal;
			background-color: $lime;
			transition: .4s all;
		}
	}
	.has-lime-background-color {
		box-shadow: 6px 6px $teal;
		&:link, &:visited {
			color: $teal;
		}
		&:hover {
			box-shadow: 0px 0px $teal;
			background-color: $purple;
			transition: .4s all;
		}
	}
	box-shadow: 6px 6px $purple;
}

